apps/miniflux/postgres.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels: &labels
    app.kubernetes.io/component: postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-volume
        - name: tmp
          emptyDir: {}
        - name: var-tmp
          emptyDir: {}
        - name: var-run
          emptyDir: {}
        - name: var-cache
          emptyDir: {}
        - name: var-log
          emptyDir: {}
      containers:
        - name: postgres
          image: docker.io/library/postgres:18.1-alpine@sha256:aa6eb304ddb6dd26df23d05db4e5cb05af8951cda3e0dc57731b771e0ef4ab29
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql
            - name: tmp
              mountPath: /tmp
            - name: var-tmp
              mountPath: /var/tmp
            - name: var-run
              mountPath: /var/run
            - name: var-cache
              mountPath: /var/cache
            - name: var-log
              mountPath: /var/log
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          ports:
            - name: postgres
              containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels: &labels
    app.kubernetes.io/component: postgres
spec:
  selector: *labels
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
